[gd_scene load_steps=20 format=3 uid="uid://cy4g25r134j8u"]

[ext_resource type="Script" uid="uid://beepmtimb5jwb" path="res://scene/pause_menu.gd" id="1_grdc7"]
[ext_resource type="Texture2D" uid="uid://vh4afr43s3ux" path="res://How to Play Images/2.png" id="2_71u2q"]
[ext_resource type="Texture2D" uid="uid://dpfwq7rnx4rff" path="res://UI/board2.png" id="2_xugnn"]
[ext_resource type="FontFile" uid="uid://cxbmqwrnhmp6c" path="res://font/Planet-Joy.ttf" id="3_xugnn"]
[ext_resource type="Texture2D" uid="uid://dutg8hymbkjbc" path="res://How to Play Images/3.png" id="4_03dpp"]
[ext_resource type="Texture2D" uid="uid://dfdce1yw0b3js" path="res://How to Play Images/5.png" id="5_uc7mi"]
[ext_resource type="Texture2D" uid="uid://bqsipv4e3lnew" path="res://How to Play Images/6.png" id="6_u32wm"]
[ext_resource type="Texture2D" uid="uid://drsrs33qj7bjm" path="res://How to Play Images/9.png" id="7_f4yx1"]
[ext_resource type="Texture2D" uid="uid://cn0oka5ji220t" path="res://How to Play Images/10.png" id="8_emx8u"]
[ext_resource type="Texture2D" uid="uid://bentlcy8xudwk" path="res://How to Play Images/12.png" id="9_h5blq"]
[ext_resource type="AudioStream" uid="uid://c47bcg7qt4ibr" path="res://sound/button-394464.mp3" id="11_03dpp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f4yx1"]
bg_color = Color(0.23529412, 0.16470589, 0.11764706, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 1
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_emx8u"]
bg_color = Color(0.31802, 0.31802, 0.31802, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 1
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h5blq"]
bg_color = Color(0.712129, 0.712129, 0.712129, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 1
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fb88f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fb88f"]
bg_color = Color(0.235294, 0.164706, 0.117647, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 1
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wmoi7"]
bg_color = Color(0.31802, 0.31802, 0.31802, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 1
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6tagm"]
bg_color = Color(0.712129, 0.712129, 0.712129, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 1
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p0hnl"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_grdc7")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_xugnn")
expand_mode = 2

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -169.0
offset_top = 40.0
offset_right = 169.0
offset_bottom = 96.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.23529412, 0.16470589, 0.11764706, 1)
theme_override_fonts/font = ExtResource("3_xugnn")
theme_override_font_sizes/font_size = 56
text = "Pause Menu"

[node name="PauseMenu" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.0
offset_top = -66.0
offset_right = 127.0
offset_bottom = 107.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 7

[node name="Resume" type="Button" parent="PauseMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.93333334, 0.90588236, 0.8666667, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_xugnn")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_f4yx1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_emx8u")
theme_override_styles/hover = SubResource("StyleBoxFlat_h5blq")
theme_override_styles/focus = SubResource("StyleBoxEmpty_fb88f")
text = "Resume"

[node name="HowToPlay" type="Button" parent="PauseMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.93333334, 0.90588236, 0.8666667, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_xugnn")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_f4yx1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_emx8u")
theme_override_styles/hover = SubResource("StyleBoxFlat_h5blq")
theme_override_styles/focus = SubResource("StyleBoxEmpty_fb88f")
text = "How to Play"

[node name="Main Menu" type="Button" parent="PauseMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.93333334, 0.90588236, 0.8666667, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_xugnn")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_f4yx1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_emx8u")
theme_override_styles/hover = SubResource("StyleBoxFlat_h5blq")
theme_override_styles/focus = SubResource("StyleBoxEmpty_fb88f")
text = "Main Menu"

[node name="Quit" type="Button" parent="PauseMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.93333334, 0.90588236, 0.8666667, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_xugnn")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_f4yx1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_emx8u")
theme_override_styles/hover = SubResource("StyleBoxFlat_h5blq")
theme_override_styles/focus = SubResource("StyleBoxEmpty_fb88f")
text = "Quit"

[node name="How To Play Panel" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="How To Play Panel"]
layout_mode = 0
offset_left = 11.0
offset_top = 45.0
offset_right = 159.0
offset_bottom = 141.0
texture = ExtResource("2_71u2q")
expand_mode = 1

[node name="Label2" type="Label" parent="How To Play Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 11.0
offset_top = 135.0
offset_right = -483.0
offset_bottom = 161.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.933333, 0.905882, 0.866667, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 9
theme_override_fonts/font = ExtResource("3_xugnn")
theme_override_font_sizes/font_size = 8
text = "1. Player needs to collect diamonds."
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect2" type="TextureRect" parent="How To Play Panel"]
layout_mode = 0
offset_left = 168.0
offset_top = 45.0
offset_right = 315.2269
offset_bottom = 141.0
texture = ExtResource("4_03dpp")
expand_mode = 1

[node name="Label3" type="Label" parent="How To Play Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 168.0
offset_top = 135.0
offset_right = -325.0
offset_bottom = 171.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.933333, 0.905882, 0.866667, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 9
theme_override_fonts/font = ExtResource("3_xugnn")
theme_override_font_sizes/font_size = 8
text = "2. The collected diamonds will appear 
on the top left of the screen."
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect3" type="TextureRect" parent="How To Play Panel"]
layout_mode = 0
offset_left = 326.0
offset_top = 46.0
offset_right = 473.0
offset_bottom = 142.0
texture = ExtResource("5_uc7mi")
expand_mode = 1

[node name="Label4" type="Label" parent="How To Play Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 326.0
offset_top = 138.0
offset_right = -167.0
offset_bottom = 170.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.933333, 0.905882, 0.866667, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 9
theme_override_fonts/font = ExtResource("3_xugnn")
theme_override_font_sizes/font_size = 8
text = "3. Player also have a health bar 
display on the top left."
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect4" type="TextureRect" parent="How To Play Panel"]
layout_mode = 0
offset_left = 480.0
offset_top = 46.0
offset_right = 629.0
offset_bottom = 142.0
texture = ExtResource("6_u32wm")
expand_mode = 1

[node name="Label5" type="Label" parent="How To Play Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 480.0
offset_top = 141.0
offset_right = -11.0
offset_bottom = 171.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.933333, 0.905882, 0.866667, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 9
theme_override_fonts/font = ExtResource("3_xugnn")
theme_override_font_sizes/font_size = 6
text = "4. When player hit the spikes or fall of the map,
   1 health will be depleted. A game over screen 
will appear when reached 0."
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect5" type="TextureRect" parent="How To Play Panel"]
layout_mode = 0
offset_left = 12.0
offset_top = 168.0
offset_right = 160.0
offset_bottom = 264.0
texture = ExtResource("7_f4yx1")
expand_mode = 1

[node name="Label6" type="Label" parent="How To Play Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 12.0
offset_top = 266.0
offset_right = -478.0
offset_bottom = 302.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.933333, 0.905882, 0.866667, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 9
theme_override_fonts/font = ExtResource("3_xugnn")
theme_override_font_sizes/font_size = 7
text = "5. When needs to collect specific amount 
of coloured diamonds required to unlock 
the questions before answering."
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect6" type="TextureRect" parent="How To Play Panel"]
layout_mode = 0
offset_left = 167.0
offset_top = 168.0
offset_right = 315.0
offset_bottom = 264.0
texture = ExtResource("8_emx8u")
expand_mode = 1

[node name="Label7" type="Label" parent="How To Play Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 167.0
offset_top = 266.0
offset_right = -327.0
offset_bottom = 302.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.933333, 0.905882, 0.866667, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 9
theme_override_fonts/font = ExtResource("3_xugnn")
theme_override_font_sizes/font_size = 7
text = "6. Player can choose the answer they 
think is correct. If the answer is wrong, 
they can retry it until it is right"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect7" type="TextureRect" parent="How To Play Panel"]
layout_mode = 0
offset_left = 325.0
offset_top = 168.0
offset_right = 473.0
offset_bottom = 264.0
texture = ExtResource("9_h5blq")
expand_mode = 1

[node name="Label8" type="Label" parent="How To Play Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 324.0
offset_top = 265.0
offset_right = -166.0
offset_bottom = 293.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.933333, 0.905882, 0.866667, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 9
theme_override_fonts/font = ExtResource("3_xugnn")
theme_override_font_sizes/font_size = 7
text = "7. Every correct answer will be displayed 
at the top left of the screen."
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect8" type="TextureRect" parent="How To Play Panel"]
layout_mode = 0
offset_left = 482.0
offset_top = 169.0
offset_right = 630.0
offset_bottom = 265.0
texture = ExtResource("2_71u2q")
expand_mode = 1

[node name="Label9" type="Label" parent="How To Play Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 482.0
offset_top = 265.0
offset_right = -10.0
offset_bottom = 301.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.933333, 0.905882, 0.866667, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 9
theme_override_fonts/font = ExtResource("3_xugnn")
theme_override_font_sizes/font_size = 7
text = "8. Player needs a minimum of 7 correct 
answers to unlock the gate then 
complete the level."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="How To Play Panel"]
layout_mode = 0
offset_left = 17.0
offset_top = 302.0
offset_right = 118.0
offset_bottom = 334.0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.933333, 0.905882, 0.866667, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_xugnn")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_fb88f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wmoi7")
theme_override_styles/hover = SubResource("StyleBoxFlat_6tagm")
theme_override_styles/focus = SubResource("StyleBoxEmpty_p0hnl")
text = "Back"

[node name="Label" type="Label" parent="How To Play Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 8.0
offset_bottom = 44.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.933333, 0.905882, 0.866667, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.498039)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 9
theme_override_fonts/font = ExtResource("3_xugnn")
theme_override_font_sizes/font_size = 32
text = "How To Play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="button_biasa" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_03dpp")

[connection signal="pressed" from="PauseMenu/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/HowToPlay" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="PauseMenu/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="PauseMenu/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="How To Play Panel/Back" to="." method="_on_back_pressed"]
